// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tariff Switcher > should not switch the tariff if it is already the cheapest and send a notification 1`] = `
{
  "allTariffsByCost": [
    {
      "cost": 80.324,
      "displayName": "Agile Octopus",
      "id": "agile",
      "productCode": "AGILE-24-10-01",
      "tariffCodeMatcher": "-AGILE-",
    },
    {
      "cost": 87.452,
      "displayName": "Cosy Octopus",
      "id": "cosy",
      "productCode": "COSY-22-12-08",
      "tariffCodeMatcher": "-COSY-",
    },
    {
      "cost": 87.452,
      "displayName": "Octopus Go",
      "id": "go",
      "productCode": "GO-VAR-22-10-14",
      "tariffCodeMatcher": "-GO-",
    },
  ],
  "currentTariffWithCost": {
    "cost": 80.324,
    "displayName": "Agile Octopus",
    "id": "agile",
    "productCode": "AGILE-24-10-01",
    "tariffCodeMatcher": "-AGILE-",
  },
  "emailType": "ALREADY_ON_CHEAPEST_TARIFF",
}
`;

exports[`Tariff Switcher > should not switch the tariff if the difference is less than 2p and send a notification 1`] = `
{
  "allTariffsByCost": [
    {
      "cost": 78.6639,
      "displayName": "Octopus Go",
      "id": "go",
      "productCode": "GO-VAR-22-10-14",
      "tariffCodeMatcher": "-GO-",
    },
    {
      "cost": 80.324,
      "displayName": "Agile Octopus",
      "id": "agile",
      "productCode": "AGILE-24-10-01",
      "tariffCodeMatcher": "-AGILE-",
    },
    {
      "cost": 87.452,
      "displayName": "Cosy Octopus",
      "id": "cosy",
      "productCode": "COSY-22-12-08",
      "tariffCodeMatcher": "-COSY-",
    },
  ],
  "currentTariffWithCost": {
    "cost": 80.324,
    "displayName": "Agile Octopus",
    "id": "agile",
    "productCode": "AGILE-24-10-01",
    "tariffCodeMatcher": "-AGILE-",
  },
  "emailType": "NOT_WORTH_SWITCHING_TARIFF",
}
`;

exports[`Tariff Switcher > should switch to the cheapest tariff and send a notification 1`] = `
{
  "allTariffsByCost": [
    {
      "cost": 47.452,
      "displayName": "Octopus Go",
      "id": "go",
      "productCode": "GO-VAR-22-10-14",
      "tariffCodeMatcher": "-GO-",
    },
    {
      "cost": 80.324,
      "displayName": "Agile Octopus",
      "id": "agile",
      "productCode": "AGILE-24-10-01",
      "tariffCodeMatcher": "-AGILE-",
    },
    {
      "cost": 87.452,
      "displayName": "Cosy Octopus",
      "id": "cosy",
      "productCode": "COSY-22-12-08",
      "tariffCodeMatcher": "-COSY-",
    },
  ],
  "currentTariffWithCost": {
    "cost": 80.324,
    "displayName": "Agile Octopus",
    "id": "agile",
    "productCode": "AGILE-24-10-01",
    "tariffCodeMatcher": "-AGILE-",
  },
  "emailType": "CHEAPER_TARIFF_EXISTS",
}
`;
